// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CommentForm /> should match its empty snapshot 1`] = `
<div
  className="sc-gsDKAQ gZZCXx k-CommentForm"
>
  <div
    className="k-CommentForm__image"
  >
    <img
      alt="Image alt"
      src="#image"
    />
  </div>
  <div
    className="k-CommentForm__form"
  >
    <textarea
      aria-describedby="custom-textarea-id-description"
      aria-label="Leave a comment"
      className="k-CommentForm__textarea"
      defaultValue=""
      disabled={false}
      id="custom-textarea-id"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Leave a comment on the project"
      rows={1}
      style={
        Object {
          "lineHeight": "1.25rem",
        }
      }
    />
    <span
      className="k-CommentForm__arrow"
    />
  </div>
</div>
`;

exports[`<CommentForm /> should match its error snapshot 1`] = `
<div
  className="sc-gsDKAQ gZZCXx k-CommentForm"
>
  <div
    className="k-CommentForm__image"
  >
    <img
      alt="Image alt"
      src="#image"
    />
  </div>
  <div
    className="k-CommentForm__form"
  >
    <textarea
      aria-describedby="custom-textarea-id-description"
      aria-label="Leave a comment"
      className="k-CommentForm__textarea"
      defaultValue=""
      disabled={false}
      id="custom-textarea-id"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Leave a comment on the project"
      rows={1}
      style={
        Object {
          "lineHeight": "1.25rem",
        }
      }
    />
    <span
      className="k-CommentForm__arrow"
    />
    <span
      className="k-u-color-error k-u-size-micro k-u-weight-500 k-CommentForm__error"
      id="custom-textarea-id-description"
    >
      Cum sociis natoque penatibus et magnis
    </span>
  </div>
</div>
`;
